--- a/app/src/main/res/layout/activity_jasa_external.xml
+++ b/app/src/main/res/layout/activity_jasa_external.xml
@@ -38,7 +38,7 @@
                     android:layout_gravity="center"/>
 
                 <ImageButton
-                    android:id="@+id/img_waktuKerja"
+                    android:id="@+id/btn_img_waktu_kerja"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="?attr/selectableItemBackgroundBorderless"
