--- a/app/src/main/res/layout/item_master_part_wajib_layanan.xml
+++ b/app/src/main/res/layout/item_master_part_wajib_layanan.xml
@@ -3,8 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:orientation="vertical">
-    
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,7 +25,21 @@
             android:padding="10dp"
             app:cardCornerRadius="2dp"
             app:cardElevation="1dp">
-            
+
+            <ImageButton
+                android:id="@+id/img_delete"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="end"
+                android:paddingTop="5dp"
+                android:paddingEnd="5dp"
+                android:background="@android:color/transparent"
+                android:tint="@color/grey_80"
+                android:visibility="gone"
+                app:srcCompat="@drawable/ic_close"
+                card_view:ignore="ContentDescription,RtlSymmetry" />
+
+
             <TextView
                 android:visibility="gone"
                 android:id="@+id/tv_nama_master_part"
@@ -117,5 +136,7 @@
         </android.support.v7.widget.CardView>
         
     </LinearLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
