--- a/app/src/main/res/layout/item_terima_part.xml
+++ b/app/src/main/res/layout/item_terima_part.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
     android:layout_marginLeft="7dp"
     android:layout_marginTop="4dp"
     android:layout_marginRight="7dp"
@@ -28,18 +28,17 @@
                 android:id="@+id/txtTanggal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="start"
-                android:padding="5dp"
+                android:layout_gravity="start"
                 android:text="Tanggal"
-                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
+                android:textSize="12sp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:textColor="@color/grey_900" />
 
             <TextView
                 android:id="@+id/txtNoDo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="end"
-                android:padding="5dp"
+                android:layout_gravity="end"
                 android:text="No. DO"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:textColor="@color/grey_900"
@@ -56,9 +55,24 @@
                 android:id="@+id/txtSupplier"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="start"
-                android:padding="5dp"
-                android:text="Supplier"
+                android:layout_gravity="start"
+                android:text="Nama Supplier"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:textColor="@color/grey_900"
+                android:textSize="12sp" />
+
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tr_no_supplier"
+            android:layout_marginTop="@dimen/spacing_medium">
+
+            <TextView
+                android:id="@+id/tv_no_ponsel_supplier"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:text="No. Supplier"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:textColor="@color/grey_900"
                 android:textSize="12sp" />
@@ -73,8 +87,7 @@
                 android:id="@+id/txtPembayaran"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="start"
-                android:padding="5dp"
+                android:layout_gravity="start"
                 android:text="Pembayaran"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:textColor="@color/grey_900"
@@ -84,8 +97,7 @@
                 android:id="@+id/txtJatuhTempo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="end"
-                android:padding="5dp"
+                android:layout_gravity="end"
                 android:text="Jatuh Tempo"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:textColor="@color/grey_900"
@@ -99,8 +111,7 @@
                 android:id="@+id/txtTotal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="start"
-                android:padding="5dp"
+                android:layout_gravity="start"
                 android:textColor="@color/grey_900"
                 android:text="Total"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
@@ -110,8 +121,7 @@
                 android:id="@+id/tv_ongkir"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="end"
-                android:padding="5dp"
+                android:layout_gravity="end"
                 android:textColor="@color/grey_900"
                 android:text="Ongkir"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
